--- a/Components/Control/PageEdit.cshtml
+++ b/Components/Control/PageEdit.cshtml
@@ -1,18 +1,16 @@
 ﻿@{
-Page.Title = "Редактирование страницы";        
+    Page.Title = "Редактирование страницы";
 
     var pageId = Request["Id"];
-    if(pageId == null || pageId.IsEmpty()){
+    if (pageId == null || pageId.IsEmpty())
+    {
         Response.SetStatus(HttpStatusCode.BadRequest);
     }
-     
-     
-     var errorm = "";
-     var pagetitlevalid = false;
-     var pageurlvalid = false;
-     var pagecontentvalid = false;
-     var pagelayoutvalid = false;
-     var IsValid = true;
+
+
+    var errorm = "";
+
+    var IsValid = true;
 
 
 
@@ -23,40 +21,45 @@ Page.Title = "Редактирование страницы";
     var today = DateTime.Now;
     var MasterPage = data.Layout;
     DirectoryInfo dirInfo = new DirectoryInfo(Server.MapPath("~/Components/Layouts"));
-    FileInfo[] fileInfo = dirInfo.GetFiles("_*.cshtml", SearchOption.TopDirectoryOnly  );
+    FileInfo[] fileInfo = dirInfo.GetFiles("_*.cshtml", SearchOption.TopDirectoryOnly);
 
 
-    if(IsPost){
+    if (IsPost)
+    {
         AntiForgery.Validate();
         var pagetitle = Request["pagetitle"];
-        if(pagetitle.IsEmpty()){
-            pagetitlevalid = true;
+        if (pagetitle.IsEmpty())
+        {
+
             IsValid = false;
         }
 
 
         var pageurl = Request["pageurl"];
-        if(pageurl.IsEmpty()){
-            pageurlvalid = true;
+        if (pageurl.IsEmpty())
+        {
+
             IsValid = false;
         }
 
         var pagedescr = Request.Unvalidated("pagedescr");
-        
+
 
         var pageauthtor = Request["pageauthtor"];
-        
 
-        
+
+
         var pagecontent = Request.Unvalidated("pagecontent"); // Validation bypassed
-        if(pagecontent.IsEmpty()){
-            pagecontentvalid = true;
+        if (pagecontent.IsEmpty())
+        {
+
             IsValid = false;
         }
 
         var pagelayout = Request["pagelayout"];
-        if(pagelayout.IsEmpty()){
-            pagelayoutvalid = true;
+        if (pagelayout.IsEmpty())
+        {
+
             IsValid = false;
         }
 
@@ -65,152 +68,136 @@ Page.Title = "Редактирование страницы";
             submitted = DateTime.Now.Date;
         }*/
 
-        if(IsValid){
-            
-        
+        if (IsValid)
+        {
 
-                try{
-                    db.Execute("UPDATE Pages SET Name=@0, Content=@1, Date=@2, Url=@3, Layout=@4, Description=@5, Author=@6 WHERE Id=@7 ", pagetitle, pagecontent, today, pageurl, pagelayout, pagedescr, pageauthtor, pageId);
-                    Response.Redirect("~/Components/Control/PageEdit?id=" + pageId);
-                } catch (Exception ex){
-                    errorm = ex.Message.ToString();
-                }
+
+
+            try
+            {
+                db.Execute("UPDATE Pages SET Name=@0, Content=@1, Date=@2, Url=@3, Layout=@4, Description=@5, Author=@6 WHERE Id=@7 ", pagetitle, pagecontent, today, pageurl, pagelayout, pagedescr, pageauthtor, pageId);
+                Response.Redirect("~/Components/Control/PageEdit?id=" + pageId);
+            }
+            catch (Exception ex)
+            {
+                errorm = ex.Message.ToString();
+            }
         }
     }
 
 }
+@section SubMenu{
+    <table class="submenu">
+        <tr>
+            <td>
+                <a href="~/Components/Control/AllPages">Все</a>
+            </td>
+            <td>
+                <a href="~/Components/Control/NewPage">Новая</a>
+            </td>
+            <td class="active">
+                <a href="~/Components/Control/PageEdit?Id=@pageId">Редактирование</a>
+            </td>
+        </tr>
+    </table>
+}
+
 
 @errorm
-<form action="@Request.Url" method="post">
+<form id="c-form-page-edit" action="@Request.Url" method="post">
     @AntiForgery.GetHtml()
-    <table>
-        <tbody>
-            <tr>
-                <td class="table-label">
-                    <label for="pagetitle">Название страницы*:</label>
-                </td>
-                <td>
-                    <input required class="input" id="pagetitle" type="text" name="pagetitle" value="@data.Name"/>
-            @if(pagetitlevalid){
-                <text>
-                    <span class="form-error">
-                        Название страницы не может быть пустым
-                    </span>
-                </text>
-            }
-                </td>
-            </tr>
-            <tr>
-                <td class="table-label">
-                    <label for="pageurl">Адрес страницы*:</label>
-                </td>
-                <td>
-                    <span class="form-input-link"><span class="t-link">
-            @Request.Url.Scheme://@Request.Url.Authority/</span><input required type="text" id="pageurl" class="input url" name="pageurl" value="@data.Url"/></span>
-            @if(pageurlvalid){
-                <text>
-                    <span class="form-error">
-                        Адрес страницы не может быть пустым
-                    </span>
-                </text>
-            }
-                </td>
-            </tr>
-        <tr>
-                <td class="table-label">
-                    <label for="pageauthtor">Автор страницы:</label>
-                </td>
-                <td>
-                    <input class="input" id="pageauthtor" type="text" name="pageauthtor" value="@data.Author"/>
-                </td>
-            </tr>
-        <tr>
-                <td class="table-label">
-                    <label for="pagelayout">Макет страницы:</label>
-                </td>
-                <td>
-                    <select required id="pagelayout" name="pagelayout">
-                @foreach (var f in fileInfo)
-               {
-                <option value="@Functions.CleanRCNames(f.Name)" @if (MasterPage == f.Name)
-                                        {<text>selected="selected"</text>}>@Functions.CleanRCNames(f.Name)</option>
-               }
-            </select>
-             @if(pagelayoutvalid){
-                <text>
-                    <span class="form-error">
-                        Страница не может быть без макета
-                    </span>
-                </text>
-            }
-                </td>
-            </tr>
-        <tr>
-                <td class="table-label">
-                    <label for="pagedescr">Описание страницы:</label>
-                </td>
-                <td>
-                    <input class="input" id="pagedescr" type="text" name="pagedescr" value="@data.Description"/>
-                </td>
-            </tr>
-        @*<tr>
-                <td class="table-label">
-                    <label for="submitted">Описание страницы:</label>
-                </td>
-                <td>
-                    <input class="input" id="submitted" type="date" name="submitted" value="@data.Submitted"/>
-                </td>
-            </tr>*@
-        </tbody>
-    </table>
 
-    <label class="table-label" for="pagecontent">Содежимое страницы*</label>
-            @if(pagecontentvalid){
-                <text>
-                    <span class="form-error">
-                        
-                        Страница не может быть пустой
-                    </span>
-                </text>
+    <div class="b-form-item required">
+        <label for="pagetitle">Название страницы:</label>
+        <input id="pagetitle" class="input" type="text" name="pagetitle" value="@data.Name"/>
+        <span style="display: none;" class="error error-title"></span>
+    </div>
+    <div class="b-form-item required">
+        <label for="pageurl">Адрес страницы:</label>
+        <!--@Request.Url.Scheme://@Request.Url.Authority/-->
+        <input id="pageurl" class="input" type="text" name="pageurl" value="@data.Url"/>
+        <span style="display: none;" class="error error-uri"></span>
+    </div>
+    <div class="b-form-item">
+        <label for="pageauthtor">Автор страницы:</label>
+        <input id="pageauthtor" class="input" type="text" name="pageauthtor" value="@data.Author"/>
+
+    </div>
+    <div class="b-form-item required">
+        <label for="pagelayout">Макет страницы:</label>
+        <select required id="pagelayout" name="pagelayout">
+            @foreach (var f in fileInfo)
+            {
+                <option value="@Functions.CleanRCNames(f.Name)" @if (MasterPage == Functions.CleanRCNames(f.Name))
+                                                                {<text>selected="selected"</text>}>@Functions.CleanRCNames(f.Name)</option>
             }
-            <textarea id="pagecontent" name="pagecontent" style="width:80%;height: 400px;min-width: 400px;">@data.Content</textarea>
+        </select>
+    </div>
+    <div class="b-form-item">
+        <label for="pagedescr">Описание страницы:</label>
+        <input id="pagedescr"  class="input" type="text" name="pagedescr" value="@data.Description"/>
 
-    <input type="submit" class="btn" value="Сохранить"/>
+    </div>
+    <div class="b-form-item required">
+        <label for="pagecontent">Содержимое страницы:</label>
+        <textarea id="pagecontent" name="pagecontent" style="width: 80%; min-width: 580px;">@data.Content</textarea>
+    </div>
+    <div class="b-form-button">
+        <input type="submit" value="Сохранить" />
+    </div>
 
- 
 
-    
+
+
+
+
 </form>
 
 
+<script src="~/Components/CKEditor/ckeditor.js"></script>
+<script src="~/Components/CKEditor/styles.js"></script>
+
+<link href="~/Components/CKEditor/skins/moono/editor.css" rel="stylesheet" />
+<link href="~/Components/CKEditor/skins/moono/dialog.css" rel="stylesheet" />
+<script src="~/Components/ui/js/Control/CKEditor-loader.js"></script>
 
 
+<script>
+    //Валидация полей формы
+    var errortext = "Поле обязательно для заполнения";
+    var IsValid = false;
 
-
-<script type="text/javascript" src="~/components/tinymce/jscripts/tiny_mce/tiny_mce.js"></script>
-<script type="text/javascript">
-tinyMCE.init({
-    mode : "textareas",
-    theme : "advanced",
-    theme_advanced_buttons1 : "mybutton,bold,italic,underline,separator,strikethrough,justifyleft,justifycenter,justifyright, justifyfull,bullist,numlist,undo,redo,link,unlink,code,image,fontsizeselect",
-    theme_advanced_buttons2 : "",
-    theme_advanced_buttons3 : "",
-    theme_advanced_toolbar_location : "top",
-    theme_advanced_toolbar_align : "left",
-    theme_advanced_statusbar_location : "bottom",
-    plugins : 'inlinepopups',
-    setup : function(ed) {
-        // Add a custom button
-        ed.addButton('mybutton', {
-            title : 'My button',
-            image : 'img/example.gif',
-            onclick : function() {
-                // Add you own code to execute something on click
-                ed.focus();
-                ed.selection.setContent('Hello world!');
+    $(function ($) {
+        $('#pagetitle').blur(function () {
+            var value = $(this).val();
+            if (value == "") {
+                $(".error-title").show().text(errortext);
+                IsValidper = false;
+            } else {
+                $(".error-title").hide();
+                IsValidper = true;
             }
         });
-    }
-});
-</script>
 
+        $('#pageurl').blur(function () {
+            var value = $(this).val();
+            if (value == "") {
+                $(".error-uri").show().text(errortext);
+                IsValidper = false;
+            } else {
+                $(".error-uri").hide();
+                IsValidper = true;
+            }
+        });
+
+        var form = document.getElementById("c-form-page-edit");
+
+
+        form.onsubmit = function () {
+            if (!IsValid) {
+                $.jGrowl('Заполните все поля формы');
+                return false;
+            }
+        };
+    })
+</script>
