--- a/Components/ErrorFiles/404.html
+++ b/Components/ErrorFiles/404.html
@@ -3,7 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>404 Not Found</title>
-    <link href="../ui/css/Errors.css" rel="stylesheet" />
+    <link href="/Components/ui/css/Errors.css" rel="stylesheet" />
+    
 </head>
 <body>
     <div class="b-page">
