--- a/Components/Layouts/_lMaster.cshtml
+++ b/Components/Layouts/_lMaster.cshtml
@@ -9,30 +9,38 @@
 <!DOCTYPE html>
 
 <html lang="@data.SiteLang">
-   <head>
-        <meta charset="utf-8" />
-        <title>@Page.Title @data.PageNameSep @data.SiteName</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-        <link href="~/Components/ui/css/Global.css" rel="stylesheet"/>
-        @if(data.SiteMeta == "on"){
+<head>
+    <meta charset="utf-8" />
+    <title>@Page.Title @data.PageNameSep @data.SiteName</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="~/Components/ui/css/Global.css" rel="stylesheet" />
+    @if (data.SiteMeta == "on")
+    {
+
         <meta name="description" content="@Page.Description"/>
+
         <meta name="keywords" content="@Page.Keywords, @data.SiteKeywords"/>
+
         <meta name="author" content="@Page.Author"/>
         }
 
-        @RenderSection("head_code", false)
-    </head>
-    <body>
-        @RenderBody()
+    @RenderSection("head_code", false)
+</head>
+<body>
+    @RenderBody()
 
-        @if(data.JSLib == "no"){<script src="~/Components/ui/js/All.js"></script>}
+    @if (data.jQuery == "on")
+    {<script src="//code.jquery.com/jquery-latest.min.js"></script>}
+    @if (data.JSLib == "on")
+    {<script src="~/Components/ui/js/All.js"></script> }
 
-       @Html.Raw(data.SiteStatCode)
-        @if(data.SiteStat == "on"){
-@*        <script>(function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter206275 = new Ya.Metrika({id:206275, webvisor:true, clickmap:true, trackLinks:true, accurateTrackBounce:true, trackHash:true}); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks");</script><noscript><div><img src="//mc.yandex.ru/watch/206275" style="position:absolute; left:-9999px;" alt="" /></div></noscript>*@
-<script>new Image().src = "//counter.yadro.ru/hit?r" + escape(document.referrer) + ((typeof(screen)=="undefined")?"" : ";s"+screen.width+"*"+screen.height+"*" + (screen.colorDepth?screen.colorDepth:screen.pixelDepth)) + ";u"+escape(document.URL) + ";h"+escape(document.title.substring(0,80)) + ";" +Math.random();</script>
-}
-    </body>
+    @Html.Raw(data.SiteStatCode)
+    @if (data.SiteStat == "on")
+    {
+
+        <script>new Image().src = "//counter.yadro.ru/hit?r" + escape(document.referrer) + ((typeof (screen) == "undefined") ? "" : ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ? screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) + ";h" + escape(document.title.substring(0, 80)) + ";" + Math.random();</script>
+        }
+</body>
 </html>
 <!-- 2008-@DateTime.Now.Year World Fly -->
