Added a link to the site

--- a/Components/Control/_Layout.cshtml
+++ b/Components/Control/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <a class="logo" href="~/Components/Control/Default" title="На главную"></a>
                 
                 <div class="b-header-account">
-                    Пользователь: @WebSecurity.CurrentUserName | <a href="~/Account/Logout">Выход</a>
+                   <a href="~/">Ваш сайт</a> | Пользователь: @WebSecurity.CurrentUserName | <a href="~/Account/Logout">Выход</a>
                 </div>
 
                 <div class="b-header-menu">
